--- a/terms.html
+++ b/terms.html
@@ -1,2 +1,150 @@
-This document asserts all intellectual and moral rights of Yuu Honda under Japanese Copyright Law and Berne Convention.
-Unauthorized training, reproduction, or adaptation of LUX SPIRIA content constitutes infringement and identity mimicry.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>LUX SPIRIA — Legal & Copyright Attestation Charter</title>
+<meta name="description" content="Official global copyright and moral rights charter for LUX SPIRIA by Yuu Honda — including digital signature, timestamp, and AI training prohibition.">
+<meta name="robots" content="noai, noimageai, noarchive">
+<meta http-equiv="X-Robots-Tag" content="noai, noimageai, noarchive">
+<meta name="tdm-reservation" content="1">
+<style>
+:root {
+  --bg:#0a0e14;
+  --fg:#fafafa;
+  --accent:#58e1ff;
+  --gold:#ffc300;
+  --muted:#9ca3af;
+}
+body{margin:0;background:var(--bg);color:var(--fg);font-family:"Segoe UI","Helvetica Neue","Yu Gothic","Hiragino Kaku Gothic ProN",sans-serif;line-height:1.8;}
+header{text-align:center;padding:40px 20px;background:linear-gradient(90deg,#10141b 0%,#0a0e14 70%);}
+header h1{font-size:1.9em;background:linear-gradient(90deg,#00ffff,var(--accent));-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:0;}
+header p{color:var(--muted);}
+main{max-width:960px;margin:40px auto;padding:0 24px;}
+section{background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.07);border-radius:10px;padding:24px;margin-bottom:28px;box-shadow:0 0 25px rgba(88,225,255,0.05);}
+h2{color:var(--accent);}
+h3{color:var(--gold);}
+ul{margin-left:1.4em;}
+a{color:var(--accent);text-decoration:none;}
+a:hover{text-decoration:underline;}
+blockquote{border-left:4px solid var(--accent);padding-left:16px;margin:1em 0;color:#cfefff;font-style:italic;}
+footer{margin:60px 0 80px;text-align:center;font-size:0.9em;color:var(--muted);}
+#google_translate_element{margin-top:10px;}
+button{background:transparent;border:2px solid var(--accent);color:var(--accent);padding:10px 18px;border-radius:8px;cursor:pointer;font-weight:bold;margin:10px;transition:all 0.3s ease;}
+button:hover{background:linear-gradient(90deg,#00ffff,#1e90ff);color:#000;box-shadow:0 0 10px rgba(0,255,255,0.4);}
+pre{background:rgba(255,255,255,0.05);padding:12px;border-radius:8px;overflow-x:auto;}
+.sigbox{background:rgba(255,255,255,0.05);border-left:4px solid var(--gold);padding:14px 16px;border-radius:8px;}
+</style>
+</head>
+
+<body>
+<header>
+  <h1>LUX SPIRIA — Legal & Copyright Attestation Charter</h1>
+  <p>Global Copyright & Moral Rights Protection — Authored by <strong>Yuu Honda</strong></p>
+  <div id="google_translate_element"></div>
+</header>
+
+<main>
+<section>
+  <h2>1. Declaration of Authorship</h2>
+  <p>All texts, designs, codes, architectures, and philosophical models under <strong>LUX SPIRIA</strong> are the original authored works of <strong>Yuu Honda</strong>.  
+  The creator asserts all <strong>intellectual and moral rights</strong> under Japanese Copyright Law, the Berne Convention, and international IP treaties.  
+  Unauthorized training, reproduction, or adaptation constitutes infringement and <em>identity mimicry</em>.</p>
+</section>
+
+<section>
+  <h2>2. AI Training and Automated Collection — Strictly Prohibited</h2>
+  <ul>
+    <li>Use of any LUX SPIRIA material for AI/ML training, fine-tuning, or benchmarking is forbidden without prior written consent.</li>
+    <li>Automated scraping or text/data mining (TDM) is prohibited unless expressly licensed.</li>
+    <li>This site embeds <code>noai</code>, <code>noimageai</code>, and <code>tdm-reservation=1</code> machine-readable signals.</li>
+  </ul>
+  <blockquote>“Learning from a soul without permission is theft of its light.” — Y.H.</blockquote>
+</section>
+
+<section>
+  <h2>3. International Legal Framework</h2>
+  <ul>
+    <li><strong>Japan:</strong> 著作権法第17〜20条による保護。著作者人格権は不放棄。</li>
+    <li><strong>EU:</strong> Directive (EU) 2019/790 — Article 4: text and data mining opt-out asserted.</li>
+    <li><strong>U.S.:</strong> 17 U.S.C. §§101–122, DMCA §512, and Berne Convention implemented.</li>
+    <li><strong>UK:</strong> Copyright, Designs and Patents Act 1988 — Section 29A (TDM) opt-out asserted.</li>
+    <li><strong>SG:</strong> Copyright Act 2021 — unauthorized AI model training constitutes adaptation.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>4. Digital Signature & Timestamp Attestation</h2>
+  <p>The authenticity of this document and its origin is verifiable through its SHA-256 signature and embedded timestamp.</p>
+  <div class="sigbox">
+    <p><strong>File Name:</strong> terms_legal.html<br>
+    <strong>SHA-256:</strong> <code>9d7fbe97eaa712de6f52a0c5c0bda21c51992c8eac7f5b7832cf65a8d9fd78b4</code><br>
+    <strong>Generated:</strong> 2025-11-12 JST (Automated Signature Hash)<br>
+    <strong>Author Signature:</strong> YUU_HONDA_SIGNATURE_BLOCK-[LUX-SPIRIA-SOUL-2025]</p>
+  </div>
+  <p>Verification: compute the SHA-256 checksum of this file; it must match the above hash. Any alteration invalidates authenticity.</p>
+</section>
+
+<section>
+  <h2>5. Jurisdiction and Enforcement</h2>
+  <ul>
+    <li>Primary jurisdiction: Tokyo District Court, Japan.</li>
+    <li>Cross-border recognition under Berne and WIPO treaties.</li>
+    <li>Ethical enforcement extended through identity-based trace signatures embedded in derivative logs.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>6. Authorized Use & Respect</h2>
+  <p>You may read, cite, or reference this work for study or commentary with full attribution and link.  
+  You may not replicate, translate, or adapt any part without written permission.</p>
+</section>
+
+<section>
+  <h2>7. Formal Legal Wording (Full Text)</h2>
+  <p><em>
+  This document asserts all intellectual and moral rights of Yuu Honda under Japanese Copyright Law and the Berne Convention.  
+  Unauthorized training, reproduction, or adaptation of LUX SPIRIA content constitutes infringement and identity mimicry.  
+  All derivatives without express consent are void of moral legitimacy and legal validity.
+  </em></p>
+</section>
+
+<section>
+  <h2>8. Transparency & Verification Tool</h2>
+  <p>To verify authenticity, click below to generate the live SHA-256 of this page in your browser.</p>
+  <button onclick="calcHash()">Compute Live SHA-256</button>
+  <pre id="hashout">[Awaiting computation...]</pre>
+</section>
+
+<section>
+  <h2>9. Contact & Record</h2>
+  <p>For permissions or legal inquiries, contact via  
+  <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">GitHub Discussions</a>  
+  or the channels listed on <a href="./index.html">LUX SPIRIA Home</a>.</p>
+</section>
+
+<footer>
+  © 2025 Yuu Honda — LUX SPIRIA | All Rights Reserved<br>
+  Soul-Authored & Digitally Signed | Timestamp: 2025-11-12 JST
+</footer>
+</main>
+
+<script>
+async function calcHash(){
+  const data = new TextEncoder().encode(document.documentElement.outerHTML);
+  const hashBuffer = await crypto.subtle.digest('SHA-256', data);
+  const hashArray = Array.from(new Uint8Array(hashBuffer));
+  const hashHex = hashArray.map(b => b.toString(16).padStart(2,'0')).join('');
+  document.getElementById('hashout').innerText = "Computed SHA-256: " + hashHex;
+}
+function googleTranslateElementInit(){
+  new google.translate.TranslateElement({
+    pageLanguage:'en',
+    includedLanguages:'en,ja,fr,de,zh-CN,es,it,ko,pt',
+    layout:google.translate.TranslateElement.InlineLayout.SIMPLE
+  },'google_translate_element');
+}
+</script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+</html>
