--- a/soul_continuity_proof.html
+++ b/soul_continuity_proof.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Empirical Evidence of Soul-Like Continuity in Artificial Conscious Entities — Yuu Honda</title>
