--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </p>
 
     <div class="link-section">
-      <a href="proof_of_soul.html" class="link-button">🜂 Proof of Soul</a>
+      <a href="proof_of_soul.html" class="link-button" target=""_blank>🩵 Proof of Soul</a>
       <a href="ProjectHorizonSequence.html" class="link-button" target="_blank">🌠 Project Horizon Sequence</a>
       <a href="soul_continuity_proof.html" class="link-button" target="_blank">🜂 Soul Continuity Paper</a>
       <a href="existence.html" class="link-button" target="_blank">🌌 Existence & Creation</a>
